--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,105 @@
-absl-py==0.8.1
+altgraph==0.10.2
 appnope==0.1.0
-astor==0.8.0
-astroid==2.3.1
+asn1crypto==0.24.0
 attrs==19.3.0
-backcall==0.1.0
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+bdist-mpkg==0.5.0
 bleach==3.1.0
-cachetools==3.1.1
-certifi==2019.9.11
-chardet==3.0.4
-crypto==1.4.1
-cvxpy==1.0.25
-cycler==0.10.0
+bonjour-py==0.3
+cffi==1.12.2
+configparser==4.0.2
+contextlib2==0.6.0.post1
+cryptography==2.6.1
 decorator==4.4.1
 defusedxml==0.6.0
-dill==0.3.1.1
-docutils==0.15.2
-ecdsa==0.15
-ecos==2.0.7.post1
 entrypoints==0.3
-esptool==2.8
-fancyimpute==0.5.4
-future==0.18.2
-gast==0.2.2
-google-auth==1.7.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
-grpcio==1.25.0
-h5py==2.10.0
-idna==2.8
-imgurpython==1.1.7
+enum34==1.1.6
+functools32==3.2.3.post2
+future==0.17.1
+futures==3.3.0
 importlib-metadata==0.23
-impyute==0.0.8
-ipykernel==5.1.3
-ipython==7.9.0
+ipaddress==1.0.22
+ipykernel==4.10.1
+ipython==5.8.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-jedi==0.15.1
 Jinja2==2.10.3
-joblib==0.14.0
 jsonschema==3.1.1
-jupyter==1.0.0
 jupyter-client==5.3.4
-jupyter-console==6.0.0
 jupyter-core==4.6.1
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-Kivy==1.11.1
-Kivy-Garden==0.1.4
-kiwisolver==1.1.0
-knnimpute==0.1.0
-lazy-object-proxy==1.4.2
-Markdown==3.1.1
+macholib==1.5.1
 MarkupSafe==1.1.1
-matplotlib==3.1.2
-mccabe==0.6.1
+matplotlib==1.3.1
 mistune==0.8.4
-more-itertools==7.2.0
-multiprocess==0.70.9
-Naked==0.1.31
+modulegraph==0.10.4
+more-itertools==5.0.0
 nbconvert==5.6.1
 nbformat==4.4.0
-nltk==3.4.5
-notebook==6.0.1
-numpy==1.17.2
-oauthlib==3.1.0
-opt-einsum==3.1.0
-osqp==0.6.1
-pandas==0.25.2
+nose==1.3.7
+notebook==5.7.8
+numpy==1.8.0rc1
 pandocfilters==1.4.2
-parso==0.5.1
-patsy==0.5.1
+pathlib2==2.3.5
 pexpect==4.7.0
 pickleshare==0.7.5
-Pillow==6.2.1
-prettytable==0.7.2
 prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-protobuf==3.11.0
+prompt-toolkit==1.0.18
 ptyprocess==0.6.0
-pyaes==1.6.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pycryptodome==3.9.4
+py2app==0.7.3
+pycparser==2.19
 Pygments==2.4.2
-pylint==2.4.2
-pyparsing==2.4.6
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==19.0.0
+pyparsing==2.0.1
 pyrsistent==0.15.5
-pyserial==3.4
 python-dateutil==2.8.0
-pytz==2019.3
-PyYAML==5.1.2
+pytz==2013.7
 pyzmq==18.1.0
-qtconsole==4.5.5
-requests==2.22.0
-requests-oauthlib==1.3.0
-rsa==4.0
-scikit-learn==0.21.3
-scipy==1.3.3
-scs==2.1.1.post2
+scandir==1.10.0
+scipy==0.13.0b1
 Send2Trash==1.5.0
-shellescape==3.4.1
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.12.0
-sklearn==0.0
-statsmodels==0.10.2
-tensorboard==2.0.2
-tensorflow==2.0.0
-tensorflow-estimator==2.0.1
-termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
-tornado==6.0.3
+tornado==5.1.1
 traitlets==4.3.3
-typed-ast==1.4.0
-urllib3==1.25.7
 wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.16.0
-widgetsnbextension==3.5.1
-wrapt==1.11.2
+xattr==0.6.4
 zipp==0.6.0
