--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ backports-abc==0.5
 backports.shutil-get-terminal-size==1.0.0
 bdist-mpkg==0.5.0
 bleach==3.1.0
-bonjour-py==0.3
+bonjour-py
 cffi==1.12.2
 configparser==4.0.2
 contextlib2==0.6.0.post1
